drops and sets up the keyspace